@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <name>jamal groovy</name>
     <artifactId>jamal-groovy</artifactId>
-    <version>1.12.3-SNAPSHOT</version>
+    <version>2.3.1-SNAPSHOT</version>
     <parent>
         <groupId>com.javax0.jamal</groupId>
         <artifactId>jamal-parent</artifactId>
-        <version>1.12.3-SNAPSHOT</version>
+        <version>2.3.1-SNAPSHOT</version>
     </parent>
     <description>Groovy module for Jamal</description>
     <build>
@@ -30,6 +30,7 @@
                 <configuration>
                     <argLine>
                 --add-opens jamal.groovy/javax0.jamal.groovy=ALL-UNNAMED
+                        --add-reads jamal.groovy=jamal.engine
             </argLine>
                 </configuration>
             </plugin>
@@ -51,31 +52,31 @@
         <dependency>
             <groupId>com.javax0.jamal</groupId>
             <artifactId>jamal-testsupport</artifactId>
-            <version>1.12.3-SNAPSHOT</version>
+            <version>2.3.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.javax0.jamal</groupId>
             <artifactId>jamal-snippet</artifactId>
-            <version>1.12.3-SNAPSHOT</version>
+            <version>2.3.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0-M1</version>
+            <version>5.10.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0-M1</version>
+            <version>5.10.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
-            <version>3.0.11</version>
+            <version>3.0.18</version>
         </dependency>
     </dependencies>
 </project>
