@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <name>jamal ruby</name>
     <artifactId>jamal-ruby</artifactId>
-    <version>1.12.3-SNAPSHOT</version>
+    <version>2.3.1-SNAPSHOT</version>
     <parent>
         <groupId>com.javax0.jamal</groupId>
         <artifactId>jamal-parent</artifactId>
-        <version>1.12.3-SNAPSHOT</version>
+        <version>2.3.1-SNAPSHOT</version>
     </parent>
     <description>Ruby module for Jamal</description>
     <build>
@@ -32,6 +32,7 @@
                 --add-opens jamal.ruby/javax0.jamal.ruby=ALL-UNNAMED
                           --add-opens java.base/sun.nio.ch=org.jruby.complete
                           --add-opens java.base/java.io=org.jruby.complete
+                          --add-reads jamal.ruby=jamal.engine
             </argLine>
                 </configuration>
             </plugin>
@@ -68,19 +69,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0-M1</version>
+            <version>5.10.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0-M1</version>
+            <version>5.10.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jruby</groupId>
             <artifactId>jruby-complete</artifactId>
-            <version>9.3.4.0</version>
+            <version>9.4.3.0</version>
         </dependency>
     </dependencies>
 </project>
